Made optimality check

--- a/transport_task/transport_task.csproj
+++ b/transport_task/transport_task.csproj
@@ -45,6 +45,7 @@
     </ItemGroup>
     <ItemGroup>
       <Content Include="data\test_1.txt" />
+      <Content Include="data\test_2.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
